--- a/index.html
+++ b/index.html
@@ -9,23 +9,16 @@
     <meta name="author" content="Pilar García Royo" />
     <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
     <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display+SC:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,500&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/style.css" />
 </head>
 
 <body>
-    </ul>
     <main>
         <nav class="navbar">
             <div class="logo-container">
@@ -42,18 +35,82 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" id="carouselInner">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </section>
-
+        <section class="my-5">
+            <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
+            <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
+            <h1 class="TituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
+        </section>
+        <section class="textoHome row m-5">
+            <div class="col-6 m-3">
+                <p>Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web, especializada en
+                    Experiencia de Usuario, Gestión de Contenidos y Desarrollo Front End, con manejo de varios lenguajes
+                    de
+                    programación y frameworks <span> <a href="#">que puedes revisar aquí.</a></span> Poseo el título de
+                    Periodista de la Universidad de
+                    Chile con un diplomado en Marketing de la Universidad del Bío-Bío. Soy creativa y con buenas
+                    habilidades
+                    comunicacionales. Amo el trabajo en equipo, el diseño y la educación continua.</p>
+                <p>Desde que salí como Periodista de la Universidad de Chile, trabajé por 15 años en televisión, radio,
+                    instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
+                    por
+                    la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
+                    profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
+                    llegó el diseño y la programación web.</p>
+                <p class="mb-5 pb-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales efectivas y
+                    satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de distintas
+                    estrategias, tales como: Investigar las tendencias de mercado; seleccionar las palabras clave para
+                    mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
+                    que
+                    conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a la
+                    retroalimentación de la audiencia, entre otras.</p>
+                    <div>
+                        <img src="./assets/Img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
+                    </div>
+            </div>
+            <div class="col-4 mt-3 ms-5">
+                <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
+                    orillas del Río Bío Bío, Chile.</p>
+                <p>Gracias :)</p>
+            </div>
+            <section class="imagen-biobio">
+                <img src="./assets/Img/bio-bio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+            </section>
+        </section>
+        <section class="row final-home">
+<h4 class="col-6 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Diseño Web."</h4>
+        </section>
     </main>
+    <footer class="footer">
+        <ul class="nav flex-column">
+            <li class="nav-item text-center icono-footer">
+                <a class="nav-link active text-center" aria-current="page" href="https://github.com/nosotros6" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a class="nav-link active text-center" aria-current="page" href="#"><i class="fas fa-envelope"></i></a>
+                <a class="nav-link active text-center " aria-current="page" href="#"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-center text-white texto-footer" href="#">El código de este portafolio se puede ver en el siguiente enlace a mi cuenta de Github:
+                </a>
+              </li>
+            <li class="nav-item text-center">
+                <a href="https://github.com/nosotros6/pilar-garcia-portafolio" target="_blank" rel="noreferrer"><img src="https://user-images.githubusercontent.com/5679180/79618120-0daffb80-80be-11ea-819e-d2b0fa904d07.gif" width="40px"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled text-center text-white texto-footer pb-5 my-3">Diseño y Desarrollo Web: Pilar García Royo - Agosto de 2022 / Actualización: Octubre de 2023 / Fotografías: Isabel Torres García</a>
+            </li>
+          </ul>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
