--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,9 @@
     <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -50,14 +52,14 @@
         <section class="my-5">
             <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
             <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
-            <h1 class="TituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
+            <h1 class="tituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
         </section>
         <section class="textoHome row m-5">
             <div class="col-6 m-3">
                 <p>Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web, especializada en
                     Experiencia de Usuario, Gestión de Contenidos y Desarrollo Front End, con manejo de varios lenguajes
                     de
-                    programación y frameworks <span> <a href="#">que puedes revisar aquí.</a></span> Poseo el título de
+                    programación y frameworks que puedes <span> <a href="studies.html">revisar aquí.</a></span> Poseo el título de
                     Periodista de la Universidad de
                     Chile con un diplomado en Marketing de la Universidad del Bío-Bío. Soy creativa y con buenas
                     habilidades
@@ -68,16 +70,17 @@
                     la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                     profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                     llegó el diseño y la programación web.</p>
-                <p class="mb-5 pb-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales efectivas y
+                <p class="mb-5 pb-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales
+                    efectivas y
                     satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de distintas
                     estrategias, tales como: Investigar las tendencias de mercado; seleccionar las palabras clave para
                     mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
                     que
                     conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a la
                     retroalimentación de la audiencia, entre otras.</p>
-                    <div>
-                        <img src="./assets/Img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
-                    </div>
+                <div>
+                    <img src="./assets/Img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
+                </div>
             </div>
             <div class="col-4 mt-3 ms-5">
                 <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
@@ -89,27 +92,35 @@
             </section>
         </section>
         <section class="row final-home">
-<h4 class="col-6 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Diseño Web."</h4>
+            <h4 class="col-6 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
+                diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Diseño Web."</h4>
         </section>
     </main>
     <footer class="footer">
         <ul class="nav flex-column">
             <li class="nav-item text-center icono-footer">
-                <a class="nav-link active text-center" aria-current="page" href="https://github.com/nosotros6" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a class="nav-link active text-center" aria-current="page" href="https://github.com/nosotros6"
+                    target="_blank"><i class="fab fa-github-square"></i></a>
                 <a class="nav-link active text-center" aria-current="page" href="#"><i class="fas fa-envelope"></i></a>
                 <a class="nav-link active text-center " aria-current="page" href="#"><i class="fab fa-linkedin"></i></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-center text-white texto-footer" href="#">El código de este portafolio se puede ver en el siguiente enlace a mi cuenta de Github:
+                <a class="nav-link text-center text-white texto-footer" href="#">El código de este portafolio se puede
+                    ver en el siguiente enlace a mi cuenta de Github:
                 </a>
-              </li>
+            </li>
             <li class="nav-item text-center">
-                <a href="https://github.com/nosotros6/pilar-garcia-portafolio" target="_blank" rel="noreferrer"><img src="https://user-images.githubusercontent.com/5679180/79618120-0daffb80-80be-11ea-819e-d2b0fa904d07.gif" width="40px"></a>
+                <a href="https://github.com/nosotros6/pilar-garcia-portafolio" target="_blank" rel="noreferrer"><img
+                        src="https://user-images.githubusercontent.com/5679180/79618120-0daffb80-80be-11ea-819e-d2b0fa904d07.gif"
+                        width="40px"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled text-center text-white texto-footer pb-5 my-3">Diseño y Desarrollo Web: Pilar García Royo - Agosto de 2022 / Actualización: Octubre de 2023 / Fotografías: Isabel Torres García</a>
+                <a class="nav-link disabled text-center text-white texto-footer pb-3 mt-3">Diseño y Desarrollo Web:
+                    Pilar García Royo - Agosto de 2022 / Actualización: Octubre de 2023 / Fotografías: Isabel Torres
+                    García</a>
             </li>
-          </ul>
+            <li class="texto-footer text-center pb-5 my-3">Fecha de hoy: <span id="fecha-actual"></span></li>
+        </ul>
     </footer>
 
 
