--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <p>Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web, especializada en
                     Experiencia de Usuario, Gestión de Contenidos y Desarrollo Front End, con manejo de varios lenguajes
                     de
-                    programación y frameworks que puedes <span> <a href="studies.html">revisar aquí.</a></span> Poseo el título de
+                    programación y frameworks que puedes <span> <a href="studies.html">revisar aquí.</a></span> Poseo el
+                    título de
                     Periodista de la Universidad de
                     Chile con un diplomado en Marketing de la Universidad del Bío-Bío. Soy creativa y con buenas
                     habilidades
@@ -123,7 +124,9 @@
         </ul>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
