--- a/proyects.html
+++ b/proyects.html
@@ -21,17 +21,84 @@
 </head>
 
 <body>
+  <nav class="navbar">
+    <div class="logo-container">
+      <a href="#">
+        <img src="./assets/img/logoWeb.png" alt="Logo de usuario" class="logo" />
+        <span class="tooltip">HOME</span>
+      </a>
+      <span class="navbar-text">Pilar García Royo</span>
+    </div>
+    <ul class="navbar-list" id="navbarList"></ul>
+  </nav>
+
   <main>
-    <nav class="navbar">
-      <div class="logo-container">
-        <a href="#">
-          <img src="./assets/img/logoWeb.png" alt="Logo de usuario" class="logo" />
-          <span class="tooltip">HOME</span>
-        </a>
-        <span class="navbar-text">Pilar García Royo</span>
+
+    <section class="my-5 ms-4">
+
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
+            type="button" role="tab" aria-controls="pills-home" aria-selected="true">Diseño UX/UI</button>
+        </li>
+
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
+            type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Desarrollo Front
+            End</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
+            type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Creación y Gestión de
+            Contenidos</button>
+        </li>
+      </ul>
+
+      <div class="tab-content" id="pills-tabContent">
+
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+          <section id="proyecto-1" data-aos="fade-up">
+            <h3 class="text-center m-5"><strong>Toolmanía.cl: Header y Check-out</strong></h3>
+            <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
+              ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
+              numquam praesentium.</p>
+          </section>
+        </div>
+
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+          <section id="toolmania" data-aos="fade-up">
+            <h3 class="text-center m-5"><strong>Mi 1er Portafolio</strong></h3>
+            <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
+              ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
+              numquam praesentium. Qui architecto doloribus sapiente?
+              Quia itaque provident ex possimus neque ipsum ratione! Neque atque a culpa eveniet error
+              quisquam officia totam tempore aliquam esse eligendi ab amet, expedita, enim rem similique non,
+              repellat blanditiis.
+              Sit quaerat, maxime illum ut impedit ipsum saepe molestiae hic atque qui vero similique possimus
+              dignissimos sapiente, quibusdam harum ipsam magni, quam blanditiis? Enim eum nobis aliquid
+              nesciunt nisi. Laudantium.</p>
+          </section>
+        </div>
+
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+          <section id="toolmania" data-aos="fade-up">
+            <h3 class="text-center m-5"><strong>Portafolio Fron End</strong></h3>
+            <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
+              ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
+              numquam praesentium. Qui architecto doloribus sapiente?
+              Quia itaque provident ex possimus neque ipsum ratione! Neque atque a culpa eveniet error
+              quisquam officia totam tempore aliquam esse eligendi ab amet, expedita, enim rem similique non,
+              repellat blanditiis.
+              Sit quaerat, maxime illum ut impedit ipsum saepe molestiae hic atque qui vero similique possimus
+              dignissimos sapiente, quibusdam harum ipsam magni, quam blanditiis? Enim eum nobis aliquid
+              nesciunt nisi. Laudantium.</p>
+          </section>
+        </div>
+
       </div>
-      <ul class="navbar-list" id="navbarList"></ul>
-    </nav>
+
+    </section>
+
   </main>
   <footer class="footer">
     <ul class="nav flex-column">
@@ -60,6 +127,9 @@
     </ul>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="./src/js/script.js"></script>
 </body>
 
