studies js y footer js

--- a/index.html
+++ b/index.html
@@ -97,32 +97,12 @@
                 diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Diseño Web."</h4>
         </section>
     </main>
+
     <footer class="footer">
-        <ul class="nav flex-column">
-            <li class="nav-item text-center icono-footer">
-                <a class="nav-link active text-center" aria-current="page" href="https://github.com/nosotros6"
-                    target="_blank"><i class="fab fa-github-square"></i></a>
-                <a class="nav-link active text-center" aria-current="page" href="#"><i class="fas fa-envelope"></i></a>
-                <a class="nav-link active text-center " aria-current="page" href="#"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-center text-white texto-footer" href="#">El código de este portafolio se puede
-                    ver en el siguiente enlace a mi cuenta de Github:
-                </a>
-            </li>
-            <li class="nav-item text-center">
-                <a href="https://github.com/nosotros6/pilar-garcia-portafolio" target="_blank" rel="noreferrer"><img
-                        src="https://user-images.githubusercontent.com/5679180/79618120-0daffb80-80be-11ea-819e-d2b0fa904d07.gif"
-                        width="40px"></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled text-center text-white texto-footer pb-3 mt-3">Diseño y Desarrollo Web:
-                    Pilar García Royo - Agosto de 2022 / Actualización: Octubre de 2023 / Fotografías: Isabel Torres
-                    García</a>
-            </li>
-            <li class="texto-footer text-center pb-5 my-3">Fecha de hoy: <span id="fecha-actual"></span></li>
-        </ul>
-    </footer>
+        <div id="footerContainer">
+          <ul id="socialIconsList" class="nav flex-column"></ul>
+        </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -131,6 +111,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="./src/js/script.js"></script>
+    <script src="./src/js/footer.js"></script>
 </body>
 
 </html>
