--- a/studies.html
+++ b/studies.html
@@ -31,107 +31,9 @@
     <ul class="navbar-list" id="navbarList"></ul>
   </nav>
   <main class="main">
-    <header class="icon-tools-section px-5">
+    <header class="icon-tools-section px-5 pt-5">
       <h1 class="toolsTitle text-center">LENGUAJES Y HERRAMIENTAS DIGITALES</h1>
       <div class="p-5 mx-5" id="toolsContainer">
-        <a href="https://www.w3schools.com/css/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-css.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="CSS">
-        </a>
-        <a href="https://www.w3schools.com/html/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-html.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="HTLM">
-        </a>
-        <a href="https://www.w3schools.com/js/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-javascript.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Javascript">
-        </a>
-        <a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-vue.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Vue.Js">
-        </a>
-        <a href="https://vuetifyjs.com/en/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-vuetifyjs.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Vuetify">
-        </a>
-        <a href="https://www.w3schools.com/sass/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-sass.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Sass">
-        </a>
-        <a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-bootstrap.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Bootstrap">
-        </a>
-        <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-vsc.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="VSCode">
-        </a>
-        <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-mac.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Mac">
-        </a>
-        <a href="https://www.microsoft.com/es-es/windows?r=1" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-windows.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Windows">
-        </a>
-        <a href="https://www.w3schools.com/mysql/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-mysql.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="MySQL">
-        </a>
-        <a href="https://www.w3schools.com/sql/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-sql.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="PostgreSQL">
-        </a>
-        <a href="https://es.babbel.com/pages/es-es/evergreen-multilanguage?bsc=gg_br_srh_spa_all&btp=default&gclid=Cj0KCQjwpompBhDZARIsAFD_Fp9UpL-sBOHc03710tittFKAbCT-EM5XEWVzBdSSy4EaLEWXHA8piHkaAgxnEALw_wcB&utm_content=20211926282_148348704934_kwd-96813789_660194858092&utm_medium=cpc&utm_source=google"
-          target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-babel.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Babel">
-        </a>
-        <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-figma.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Figma">
-        </a>
-        <a href="https://www.adobe.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-Xd.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Adobe XD">
-        </a>
-        <a href="https://www.w3schools.com/git/default.asp" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-git.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Git">
-        </a>
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-github.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Github">
-        </a>
-        <a href="https://firebase.google.com/?hl=es" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-firebase.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Firebase">
-        </a>
-        <a href="https://docs.prestashop-project.org/1.7-documentation/v/spanish/guia-usuario" target="_blank"
-          rel="noopener noreferrer">
-          <img src="./assets/Img/icon-prestashop.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Prestashop">
-        </a>
-        <a href="https://www.salesforce.com/es/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-salesforce.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Salesforce">
-        </a>
-        <a href="https://www.optimalworkshop.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-optimal.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Optimal Workshop">
-        </a>
-        <a href="https://trello.com/es" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-trello.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Trello">
-        </a>
-        <a href="https://www.canva.com/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-canva.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Canva">
-        </a>
-        <a href="https://www.google.com/intl/es/drive/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Img/icon-drive.png" alt="Icónos de herramientas digitales" data-bs-toggle="tooltip"
-            data-bs-placement="top" title="Google Drive">
-        </a>
       </div>
     </header>
     <section class="row">
@@ -246,45 +148,13 @@
 
         </section>
       </section>
-      <section class="col-3 skills-section pt-5 px-5">
-        <h4 class="skills-subtitle my-5 pt-5">Competencias:</h4>
-        <ul class="skills-list mt-5">
-          <li class="skill-item my-3">CSS 3</li>
-          <li class="skill-item my-3">HTML 5</li>
-          <li class="skill-item my-3">Javascript</li>
-          <li class="skill-item my-3">Vue.Js</li>
-          <li class="skill-item my-3">Vuetify</li>
-          <li class="skill-item my-3">Bootstrap</li>
-          <li class="skill-item my-3">Figma</li>
-          <li class="skill-item my-3">Adobe XD</li>
-          <li class="skill-item my-3">Trello</li>
-          <li class="skill-item my-3">Salesforce</li>
-        </ul>
+      <section class="col-3 skills-section pt-3 px-5">
         <h4 class="skills-subtitle my-5 pt-5">Habilidades Blandas:</h4>
-        <ul class="skills-list mt-5">
-          <li class="skill-item my-3">Creatividad</li>
-          <li class="skill-item my-3">Comunicación</li>
-          <li class="skill-item my-3">Habilidades sociales</li>
-          <li class="skill-item my-3">Aprendizaje continuo</li>
-          <li class="skill-item my-3">Adaptación y resiliencia</li>
-          <li class="skill-item my-3">Resolución de problemas</li>
-          <li class="skill-item my-3">Trabajo en equipo</li>
-          <li class="skill-item my-3">Iniciativa</li>
-          <li class="skill-item my-3">Negociación</li>
-          <li class="skill-item my-3">Redacción</li>
-          <li class="skill-item my-3">Capacidad de análisis y síntesis</li>
-        </ul>
+        <ul class="skills-list mt-5" id="softSkillsList"></ul>
+        <h4 class="skills-subtitle my-5 pt-5">Competencias:</h4>
+        <ul class="skills-list mt-5" id="competencesList"></ul>
         <h4 class="skills-subtitle my-5 pt-5">Hobbies:</h4>
-        <ul class="skills-list mt-5">
-          <li class="skill-item my-3">Micro Pintura y Art Nails</li>
-          <li class="skill-item my-3">Lectura de Tarot</li>
-          <li class="skill-item my-3">Acuarela</li>
-          <li class="skill-item my-3">Pintural al óleo</li>
-          <li class="skill-item my-3">Escritura</li>
-          <li class="skill-item my-3">Diseño y Costura de Pachtwork</li>
-          <li class="skill-item my-3">Bisutería</li>
-          <li class="skill-item my-3">Jardinería y Permacultura</li>
-        </ul>
+        <ul class="skills-list mt-5" id="hobbiesList"></ul>
       </section>
     </section>
     <section class="img-skills">
@@ -296,37 +166,20 @@
         (Martin Luther King)</h4>
     </section>
   </main>
-  <footer class="footer">
-    <ul class="nav flex-column">
-      <li class="nav-item text-center icono-footer">
-        <a class="nav-link active text-center" aria-current="page" href="https://github.com/nosotros6"
-          target="_blank"><i class="fab fa-github-square"></i></a>
-        <a class="nav-link active text-center" aria-current="page" href="#"><i class="fas fa-envelope"></i></a>
-        <a class="nav-link active text-center " aria-current="page" href="#"><i class="fab fa-linkedin"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-center text-white texto-footer" href="#">El código de este portafolio se puede
-          ver en el siguiente enlace a mi cuenta de Github:
-        </a>
-      </li>
-      <li class="nav-item text-center">
-        <a href="https://github.com/nosotros6/pilar-garcia-portafolio" target="_blank" rel="noreferrer"><img
-            src="https://user-images.githubusercontent.com/5679180/79618120-0daffb80-80be-11ea-819e-d2b0fa904d07.gif"
-            width="40px"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled text-center text-white texto-footer pb-5 my-3">Diseño y Desarrollo Web:
-          Pilar García Royo - Agosto de 2022 / Actualización: Octubre de 2023 / Fotografías: Isabel Torres
-          García</a>
-      </li>
-      <!-- <li class="texto-footer text-center pb-5 my-3">Fecha de hoy: <span id="fecha-actual"></span></li> -->
-    </ul>
-  </footer>
 
+  <footer class="footer">
+    <div id="footerContainer">
+      <ul id="socialIconsList" class="nav flex-column"></ul>
+    </div>
+  </footer>
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="./src/js/script.js"></script>
+  <script src="./src/js/script-studies.js"></script>
+ <script src="./src/js/footer.js"></script>
 </body>
 
 </html>
