--- a/studies.html
+++ b/studies.html
@@ -40,7 +40,7 @@
       <section class="col-9">
         <h1 class="skillsTitle text-center">ESTUDIOS Y CAPACITACIÓN</h1>
         <section class="card-grid m-5 ps-5">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
             </div>
@@ -51,7 +51,7 @@
             <a href="https://talentodigitalparachile.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/ux-google.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
             </div>
@@ -63,7 +63,7 @@
             <a href="https://www.coursera.org/google/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/content-manager.png" class="card-img-top w-50 m-5"
                 alt="Insignia de Front End Trainee">
@@ -75,8 +75,8 @@
             <a href="https://talentodigitalparachile.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
-            <div class="image-container mb-5">
+          <div class="card">
+            <div class="image-container">
               <img src="./assets/Img/front-end.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
             </div>
             <h3 class="card-title">Front End Trainee</h3>
@@ -86,7 +86,7 @@
             <a href="https://talentodigitalparachile.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/redes-sociales.png" class="card-img-top w-50 m-5"
                 alt="Certificado Estrategias de Ventas en Redes Sociales">
@@ -98,7 +98,7 @@
             <a href="https://simondecirene.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/tecnicas-gestion.png" class="card-img-top w-50 m-5"
                 alt="Certificado Estrategias de Ventas en Redes Sociales">
@@ -110,7 +110,7 @@
             <a href="https://simondecirene.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/desarrollo-web.png" class="card-img-top w-50 m-5"
                 alt="Certificado Desarrollo Web para Emprendimientos">
@@ -122,7 +122,7 @@
             <a href="https://www.lewagon.com/es" target="_blank" class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container my-5 pb-4">
               <img src="./assets/Img/ubb.png" class="card-img-top w-50 m-5" alt="Certificado de título de Periodista">
             </div>
@@ -134,7 +134,7 @@
               class="card-link mb-5">Sitio web</a>
           </div>
 
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <div class="image-container">
               <img src="./assets/Img/periodismo.png" class="card-img-top w-50 m-5"
                 alt="Certificado de título de Periodista">
@@ -162,8 +162,7 @@
     </section>
     <section class="row final-home">
       <h4 class="col-6 texto-final-home m-5">"Tus talentos y habilidades irán mejorando con
-        el tiempo, pero para eso has de empezar."
-        (Martin Luther King)</h4>
+        el tiempo, pero para eso has de empezar." <span id="texto-final-home-span">(Martin Luther King)</span></h4>
     </section>
   </main>
 
