--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div id="footerContainer">
           <ul id="socialIconsList" class="nav flex-column"></ul>
         </div>
+        <p class="texto-footer text-center pb-5">Fecha de hoy: <span id="fecha-actual"></span></p>
       </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
