--- a/jobs.html
+++ b/jobs.html
@@ -44,7 +44,7 @@
       </div>
     </header>
     <div>
-      <h1 class="skillsTitle text-center">ESTUDIOS Y CAPACITACIÓN</h1>
+      <h1 class="skillsTitle text-center">TRABAJOS DESTACADOS</h1>
     </div>
     <section class="work-cards justify-content-center">
       <div id="card-jobs" class="card">
