proyects pdf campania dos

--- a/proyects.html
+++ b/proyects.html
@@ -295,7 +295,7 @@
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
               ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
               numquam praesentium.</p>
-            <iframe src="./assets/pdf/afiche-campaña.pdf" width="100%" height="500"></iframe>
+            <img src="./assets/Img/afiche.png" width="100%" height="500"></img>
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
