--- a/proyects.html
+++ b/proyects.html
@@ -325,6 +325,17 @@
               numquam praesentium.</p>
             <iframe src="./assets/pdf/yoga-entornasol.pdf" width="100%" height="500"></iframe>
           </section>
+          <section class="container" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Documentales Travesía, Historia de Concepción</h3>
+            <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
+              ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
+              numquam praesentium.</p>
+              <span class="text-secondary">Ver capítulos aquí:</span><a href="https://www.youtube.com/watch?v=GGg-fEHd4Os&t=142s"
+                target="_blank" rel="noopener noreferrer">
+                <p>Travesía, Historia de Concepción, capítulo 1</p>
+              </a>
+            <img src="./assets/Img/travesia.png" width="100%" height="500"></img>
+          </section>
         </div>
 
       </div>
