carrusel y logo svg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.png" />
+    <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
     <title>Pilar García Royo</title>
     <meta name="author" content="Pilar García Royo" />
     <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -25,7 +25,7 @@
         <nav class="navbar">
             <div class="logo-container">
                 <a href="#">
-                    <img src="./assets/img/logo-pili.png" alt="Logo" class="logo" />
+                    <img src="./assets/img/logo-pili.svg" alt="Logo" class="logo" />
                     <span class="tooltip">HOME</span>
                 </a>
                 <span class="navbar-text">Pilar García Royo</span>
@@ -33,7 +33,7 @@
             <ul class="navbar-list" id="navbarList"></ul>
         </nav>
 
-        <section>
+        <header>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" id="carouselInner">
                 </div>
@@ -48,7 +48,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </section>
+        </header>
         <section class="my-5">
             <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
             <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
@@ -80,7 +80,7 @@
                     conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a la
                     retroalimentación de la audiencia, entre otras.</p>
                 <div>
-                    <img src="./assets/Img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
+                    <img src="./assets/img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
                 </div>
             </div>
             <div class="col-4 mt-3 ms-5">
@@ -89,7 +89,7 @@
                 <p>Gracias :)</p>
             </div>
             <section class="imagen-biobio">
-                <img src="./assets/Img/bio-bio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+                <img src="./assets/img/bio-bio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
             </section>
         </section>
         <section class="row final-home">
