--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.png" />
+  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg" />
   <title>Pilar García Royo</title>
   <meta name="author" content="Pilar García Royo" />
   <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -24,7 +24,7 @@
   <nav class="navbar">
     <div class="logo-container">
       <a href="#">
-        <img src="./assets/img/logo-pili.png" alt="Logo" class="logo" />
+        <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
         <span class="tooltip">HOME</span>
       </a>
       <span class="navbar-text">Pilar García Royo</span>
@@ -33,9 +33,9 @@
   </nav>
 
   <main>
-    <header class="px-0">
+    <header class="pb-0 pt-3">
       <div style="position: relative;">
-        <img src="./assets/Img/caquis-hero.png" alt="Caquis de mi Jardín" class="w-100">
+        <img src="./assets/Img/caquis-footer.svg" alt="Caquis de mi Jardín" class="w-100">
       </div>
       <div style="position: absolute; background-color: black; color: white; top: 200px; left: 0px;">
         <h4 class="texto-final-home m-3">"Amar a la vida a través del trabajo, es intimar con <br> el más recóndito
@@ -124,17 +124,6 @@
     </section>
 
   </main>
-  <!-- <section>
-    <section class="row final-home">
-      <h4 class="col-6 texto-final-home m-5">"Amar a la vida a través del trabajo, es intimar con el más recóndito secreto de la vida."
-        Khalil Gibran." <span id="texto-final-home-span">(Khalil Gibran)</span></h4>
-    </section>
-  </section> -->
-  <section class="px-0">
-    <div style="position: relative;">
-      <img src="./assets/Img/caquis-footer.png" alt="Caquis de mi Jardín" class="w-100">
-    </div>
-  </section>
 
   <footer class="footer">
     <div id="footerContainer">
