--- a/proyects.html
+++ b/proyects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.png" />
+  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg" />
   <title>Pilar García Royo</title>
   <meta name="author" content="Pilar García Royo" />
   <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -24,25 +24,16 @@
   <nav class="navbar">
     <div class="logo-container">
       <a href="#">
-        <img src="./assets/img/logo-pili.png" alt="Logo" class="logo" />
+        <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
         <span class="tooltip">HOME</span>
       </a>
       <span class="navbar-text">Pilar García Royo</span>
     </div>
     <ul class="navbar-list" id="navbarList"></ul>
   </nav>
-  <header class="px-0">
-    <div style="position: relative;">
-      <img src="./assets/Img/caquis-hero.png" alt="Caquis de mi Jardín" class="w-100">
-    </div>
-    <div style="position: absolute; background-color: black; color: white; top: 200px; left: 0px;">
-      <h4 class="hero-text m-3">MI PORTAFOLIO: PROYECTOS DESTACADOS</h4>
-    </div>
-    </div>
-  </header>
-  <main class="my-5">
-    <section>
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  <main class="pt-5 my-5">
+    <section class="pt-5">
+      <ul class="nav nav-pills mb-3 ms-5" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
             type="button" role="tab" aria-controls="pills-home" aria-selected="true">Diseño UX/UI</button>
@@ -50,12 +41,12 @@
 
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-            type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Desarrollo Front
+            type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Front
             End</button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-            type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Creación y Gestión de
+            type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Gestión de
             Contenidos</button>
         </li>
       </ul>
@@ -184,7 +175,7 @@
 
         <!-- INICIO CUERPO DE 2do TABS -->
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Programación de e-commerce</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Toolmania: Header y Checkout</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -194,20 +185,20 @@
               rel="noopener noreferrer">
               <p class="ms-5 mb-5">http://toolmania.cl/</p>
             </a>
-            <img alt="Toolmania" loading="lazy" width="auto" height="auto" ; src="./assets/img/web-toolmania.png" />
+            <img alt="Toolmania" loading="lazy" width="100%" height="500" ; src="./assets/img/web-toolmania.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">One Stock: programa de logística Nodriza SpA</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
               ipsum optio, laboriosam omnis voluptatem maxime incidunt in illo voluptatum ratione nihil
               numquam praesentium.</p>
             <div class="containerImgOneStock">
-              <img alt="One Stock parte 1" loading="lazy" src="./assets/img/OneStock1.png" />
-              <img alt="One Stock parte 2" loading="lazy" src="./assets/img/OneStock2.png" />
+              <img alt="One Stock parte 1" loading="lazy" width="100%" height="500" src="./assets/img/OneStock1.png" />
+              <img alt="One Stock parte 2" loading="lazy" width="100%" height="500" src="./assets/img/OneStock2.png" />
             </div>
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Estudio de Mercado IDMA 2023</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -217,9 +208,9 @@
               target="_blank" rel="noopener noreferrer">
               <p>http://nosotros6.github.io/anexos-estudio-2023/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/idma.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/idma.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Web Portafolio Front End</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -229,9 +220,9 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/portafolio/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/portafolio.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/portafolio.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Animales Salvajes</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -241,9 +232,9 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/Animales-Salvajes/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/animales.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/animales.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Cursos Alfa Web</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -253,9 +244,9 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/cursos-alfaweb/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/alfa-web.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/alfa-web.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Ricomida</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -265,9 +256,9 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/ricomida.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/ricomida.png" />
           </section>
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Examen Certificación TD</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Adopta una Mascota</h3>
             <p class="m-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nam fugit, reiciendis
@@ -277,7 +268,7 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/desafio-td-ux/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="auto" height="auto" ; src="./assets/img/landing-examen-td.png" />
+            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500"; src="./assets/img/landing-examen-td.png" />
           </section>
         </div>
 
