--- a/studies.html
+++ b/studies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.png" />
+  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg" />
   <title>Pilar García Royo</title>
   <meta name="author" content="Pilar García Royo" />
   <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -23,7 +23,7 @@
   <nav class="navbar">
     <div class="logo-container">
       <a href="index.html">
-        <img src="./assets/img/logo-pili.png" alt="Logo" class="logo" />
+        <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
         <span class="tooltip">HOME</span>
       </a>
       <span class="navbar-text">Pilar García Royo</span>
