acordeon disenio ux ui

--- a/studies.html
+++ b/studies.html
@@ -160,9 +160,9 @@
     <section class="img-skills">
       <img src="./assets/Img/img-kills.png" alt="Niña corriendo" id="ninia-skills">
     </section>
-    <section class="row final-home">
-      <h4 class="col-6 texto-final-home m-5">"Tus talentos y habilidades irán mejorando con
-        el tiempo, pero para eso has de empezar." <span id="texto-final-home-span">(Martin Luther King)</span></h4>
+    <section class="row final-studies">
+      <h4 class="col-5 texto-final-studies m-5">"Tus talentos y habilidades irán mejorando con
+        el tiempo, pero para eso has de empezar." <span id="texto-final-studies-span">(Martin Luther King)</span></h4>
     </section>
   </main>
 
