--- a/contact.html
+++ b/contact.html
@@ -21,29 +21,141 @@
 </head>
 
 <body>
-
-  <nav class="navbar">
-    <div class="logo-container">
-      <a href="#">
-        <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
-        <span class="tooltip">HOME</span>
-      </a>
-      <span class="navbar-text">Pilar García Royo</span>
+  <div class="tab-content" id="pills-tabContent">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <section data-aos="fade-up" class="m-5 pt-5">
+        <!-- 1er tabs UI-->
+        <div class="accordion-item">
+          <h2 class="accordion-header proyects-title text-center text-uppercase m-5" id="flush-headingOne">
+            <button class="accordion-button collapsed titulo-boton" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Experiencia de Usuario (UX)
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <!-- contenido 2da parte UI-->
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Landing Page Adopta tu Mascota (examen de certificación TD / 1ra parte:
+                  Estudio UX)
+                </h3>
+                <a href="http://nosotros6.github.io/desafio-td-ux/" target="_blank" rel="noopener noreferrer">
+                  <p>http://nosotros6.github.io/desafio-td-ux</p>
+                </a>
+                <iframe src="./assets/pdf/ux-prueba-td.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Test Usuario</h3>
+                <iframe src="./assets/pdf/ux-test-usuario.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Card Sorting AI</h3>
+                <iframe src="./assets/pdf/ux-card-sorting-ai.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Análisis Benchmarketing</h3>
+                <iframe src="./assets/pdf/ux-benchmarketing.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Análisis de Componentes de Arquitectura de la Información</h3>
+                <iframe src="./assets/pdf/ux-componentes-ai.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Tree Test</h3>
+                <iframe src="./assets/pdf/ux-tree-test.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Test Heurística</h3>
+                <iframe src="./assets/pdf/ux-test-heuristica.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Branding y Guía de Estilos</h3>
+                <iframe src="./assets/pdf/ux-branding-guia.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Análisis Gestalt</h3>
+                <iframe src="./assets/pdf/ux-gestald-cedeus.pdf" width="100%" height="500"></iframe>
+              </section>
+            </div>
+          </div>
+        </div>
+        <!-- 2do tabs UX-->
+        <div class="accordion-item">
+          <h2 class="accordion-header proyects-title text-center text-uppercase m-5" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Interface de Usuario (UI)
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Mockup Landing Page Estudio de Mercado IDMA 2023</h3>
+                <span class="text-secondary">Ver la web aquí:</span><a href="http://nosotros6.github.io/desafio-td-ux/"
+                  target="_blank" rel="noopener noreferrer">
+                  <p>http://nosotros6.github.io/anexos-estudio-2023/</p>
+                </a>
+                <iframe src="./assets/pdf/ui-corfo.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Prototipados Landing Page Adopta tu Mascota (examen de certificación TD /
+                  2da parte)</h3>
+                <span class="text-secondary">Ver la web aquí:</span><a href="http://nosotros6.github.io/desafio-td-ux/"
+                  target="_blank" rel="noopener noreferrer">
+                  <p>http://nosotros6.github.io/desafio-td-ux</p>
+                </a>
+                <iframe src="./assets/pdf/ui-prueba-td.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Prototipado Desktop de Alta Fidelidad para Checkout del ecommerce
+                  Toolmania
+                </h3>
+                <span class="text-secondary">Ver la web aquí:</span><a href="http://toolmania.cl/" target="_blank"
+                  rel="noopener noreferrer">
+                  <p>http://toolmania.cl/</p>
+                </a>
+                <iframe src="./assets/pdf/ui-toolmania-desktop.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Prototipado Mobile de Alta Fidelidad para Checkout del ecommerce Toolmania
+                </h3>
+                <span class="text-secondary">Ver la web aquí:</span><a href="http://toolmania.cl/" target="_blank"
+                  rel="noopener noreferrer">
+                  <p>http://toolmania.cl/</p>
+                </a>
+                <iframe src="./assets/pdf/ui-toolmania-mobile.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Landing Page Shelter Feet</h3>
+                <iframe src="./assets/pdf/ui-maqueta-landing-shelter-feet.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Fundación Niño y Cáncer</h3>
+                <iframe src="./assets/pdf/ui-fundación-nc.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Mi Streaming</h3>
+                <iframe src="./assets/pdf/ui-proyectoMiStreaming.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Wireframe Emporio Amanda</h3>
+                <iframe src="./assets/pdf/ui-wireframeEmporioAmanda.pdf" width="100%" height="500"></iframe>
+              </section>
+              <section class="container my-5">
+                <h3 class="proyects-subtitle">Proyecto DCU</h3>
+                <iframe src="./assets/pdf/ui-proyecto-dcu.pdf" width="100%" height="500"></iframe>
+              </section>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-    <ul class="navbar-list" id="navbarList"></ul>
-  </nav>
+  </div>
 
-  <main>
-    <section class="m-5 p-5">
-      <h3>VISTA EN DESARROLLO</h3>
-    </section>
-  </main>
 
-  <footer class="footer">
-    <div id="footerContainer">
-      <ul id="socialIconsList" class="nav flex-column"></ul>
-    </div>
-  </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
