--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
     <main>
         <nav class="navbar">
             <div class="logo-container">
-                <a href="#">
-                    <img src="./assets/img/logo-pili.svg" alt="Logo" class="logo" />
-                    <span class="tooltip">HOME</span>
-                </a>
-                <span class="navbar-text">Pilar García Royo</span>
+              <a href="#">
+                <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
+                <span class="tooltip">HOME</span>
+              </a>
+              <span class="navbar-text">Pilar García Royo</span>
             </div>
             <ul class="navbar-list" id="navbarList"></ul>
-        </nav>
-
-        <header>
+          </nav>
+        <!-- <header>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" id="carouselInner">
                 </div>
@@ -48,7 +47,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </header>
+        </header> -->
         <section class="my-5">
             <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
             <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
@@ -71,39 +70,44 @@
                     la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                     profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                     llegó el diseño y la programación web.</p>
-                <p class="mb-5 pb-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales
-                    efectivas y
-                    satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de distintas
-                    estrategias, tales como: Investigar las tendencias de mercado; seleccionar las palabras clave para
-                    mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
-                    que
-                    conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a la
-                    retroalimentación de la audiencia, entre otras.</p>
-                <div>
+                <p class="mt-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales
+                    efectivas y satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de
+                    distintas
+                    estrategias, tales como: </p>
+                <div class="pt-5">
                     <img src="./assets/img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
                 </div>
             </div>
-            <div class="col-4 mt-3 ms-5">
+            <section class="col-5 mt-3">
+                <img src="./assets/img/biobio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+                <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
+                    mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
+                    que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
+                    la
+                    retroalimentación de la audiencia, entre otras.</p>
                 <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
                     orillas del Río Bío Bío, Chile.</p>
-                <p>Gracias :)</p>
-            </div>
-            <section class="imagen-biobio">
-                <img src="./assets/img/bio-bio.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+                <p class="mb-5 pb-5">Gracias :)</p>
             </section>
         </section>
         <section class="row final-home">
-            <h4 class="col-6 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
-                diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Diseño Web."</h4>
+            <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
+                diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
+            <div class="col-7 m-5 ps-5">
+                <img src="./assets/img/mariposa.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="./assets/img/otonio.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="./assets/img/flor.svg" class="campo-img" alt="Parcela Castañares">
+            </div>
         </section>
     </main>
 
     <footer class="footer">
         <div id="footerContainer">
-          <ul id="socialIconsList" class="nav flex-column"></ul>
+            <ul id="socialIconsList" class="nav flex-column"></ul>
         </div>
         <p class="texto-footer text-center pb-5">Fecha de hoy: <span id="fecha-actual"></span></p>
-      </footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
